# eq-generator

./: .gitignore  AGENTS.md  Cargo.toml  ENHANCER_PIPELINE.md  FFT.md  Makefile  README.md  REPORT.md  SMART_VOLUME.md  TODO.md  analysis_shelf_fit.py  build_all_house_curves.sh  check_31hz.py  eqgen.py  flake.nix  harmonic_bass_enhancer.eel  harmonic_bass_enhancer_linear.eel  harmonic_bass_enhancer_linear_limit.eel  pyproject.toml  run_analysis.sh  sanitycheck.sh  sanitycheck_desktop.csv  sanitycheck_mobile.csv  sanitycheck_noenhancer_desktop.csv  sanitycheck_noenhancer_mobile.csv  sweep.py  technics_standing_desktop.csv  technics_standing_mobile.csv  test_31hz_full.py  test_enhancer.c  test_fullband_fit.py  test_real_fullband_fit.py  test_sine_sweep.py  wire_eq.py  wire_eq.sh
.pi_work/: headroom_spec.md  worker1_c_core_output.md  worker2_smart_volume_output.md  worker3_python_output.md
benchmarks/: benchmark.py
docs/: ADC_DAC_ESP32-S3.md  CROSSOVER.md
eqgen/: __init__.py  analysis.py  dsp.py  enhancer_ffi.py  eq_fit.py  farina.py  header_gen.py  io.py  iso226.py  iso226_table.csv  model.py  pipeline.py  presets.py  process.py  quantize.py  server.py  smart_volume.py  sweep.py
eqgen/analysis_tools/: loudness.py
eqgen/cli/: audition.py  enhance.py  eqgen.py  export.py  graph_check.py  preset.py  wire.py
eqgen/fitters/: blend.py  cma_es.py  diffevo.py  hillclimb.py  refine.py
eqgen/tests/: run_all.py  test_31hz.py  test_chebyshev.py  test_compressor.py  test_eq_pipeline.py  test_evenness.py  test_fullband_fit.py  test_gain_safety.py  test_harmonics.py  test_input_signals.py  test_iso226.py  test_limiter_transparency.py  test_model.py  test_real_fullband_fit.py  test_roundtrip.py  test_sine_sweep.py
eqgen/web_ui/: __init__.py  web_ui.html
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  bt_a2dp.c  bt_a2dp.h  i2s_out.c  i2s_out.h  main.c  sfx_player.c  sfx_player.h
iso226/: digitize_iso226.py
presets/: bypass.json  cardboard.json  house_curves.json  lunchbox-morebass.json  lunchbox.json  new-preset.json  technics-1.json  technics-standing.json
prototypes/: analysis_chebyshev.py  batch_process.py  compare_fitters.py  fft_eq_test  fft_eq_test.c  noise_shape_test.py  test_fft_am.py
python/: dsp.py  enhancer_ffi.py  run_all.py
python/archive/: analyze.py  chebyshev_math.py  compressor_analysis.py  diagnose_180hz.py  find_h_levels.py  fix_v2.py  fix_verify.py  goertzel_analyzer.py  harmonic_bass.py  linearity_verify.py  loudness_model.py  model_gain_analysis.py  model_verify.py  plot_cutoff_sweep.py  t3_isolation.py  transient_analysis.py  v2_linearity_check.py
src/: Makefile  bench_hybrid  bench_hybrid.c  bench_sweep.c  biquad.h  biquad_q28.h  dc_blocker.h  enhancer.c  enhancer.h  enhancer_api.c  enhancer_api.h  envelope.h  eq_coeffs.h  eqgen_filter.c  fft_eq.c  fft_eq.h  filter.c  fpu.h  lp.h  lp_q16.h  main.rs  sfx_data.h  smart_volume.h  test_enhancer  test_enhancer.c  volume_control.h
tools/: sv_knob.py
(+13 files in other folders)
